# eif4e-inhibitor-discovery

./: LICENSE  README.md  pyproject.toml
scripts/: ae.sh  ae_hp_debug.sh  ae_hp_tuning.sh  data_preprocessing.sh  docking_simulations.md  predictor.sh  run_ga.sh  run_pga.sh
src/: GA.py  PGA.py  Vocabulary.py  WGANGP.py  augment_data.py  autoencoder.py  autoencoder_hp.py  data_preprocessing.py  data_processing.py  predictor.py  run_GA.py  run_PGA.py  run_WGANGP.py  utils.py  visualize.py
src/datasets/: augmented_dataset.csv  augmented_dataset_LV.csv  subset.py  subset_100k_LV.csv  subset_500k.csv  targeted_dataset.csv
src/models/: LogP_model.weights.h5  MW_model.weights.h5  pIC50_model.weights.h5  predictor_model.weights.h5
src/predictor/: model_LogP.keras  model_MW.keras  model_pIC50.keras  rf_model_pIC50.joblib
src/util/: sas.py
