[project]
name = "eif4e-inhibitor-discovery"
version = "0.1.0"
description = "An integrated in silico approach for AI-enhanced discovery of novel eIF4E inhibitors targeting drug-resistant ER+ breast cancer"
authors = [
    { name = "Zeyu Yao", email = "zeyu.yao@stonybrook.edu" },
    { name = "Audrey Huang", email = "audrey.huang.1@stonybrook.edu" },
    { name = "Xingchuan Ma", email = "xingchuan.ma@stonybrook.edu" },
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "rdkit>=2024.3.3",
    "selfies>=2.1.2",
    "numpy>=1.26.4",
    "keras-tuner>=1.4.7",
    "tensorflow>=2.17.0",
    "matplotlib>=3.9.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false
